# SECURE-MESSENGER-CLI

./: .env.example  .gitignore  CMakeLists.txt  README.md
client/: CMakeLists.txt  config.hpp  logic.cpp  logic.hpp  main.cpp
server/: CMakeLists.txt  auth.cpp  auth.hpp  broadcaster.cpp  broadcaster.hpp  crypto.cpp  crypto.hpp  database.hpp  main.cpp  models.hpp  repository.cpp  repository.hpp  routes.cpp  routes.hpp  services.cpp  services.hpp  thread_safe_queue.hpp  utils.cpp  utils.hpp
server/repositories/: message_repository.cpp  message_repository.hpp  user_repository.cpp  user_repository.hpp
server/routes/: message_routes.cpp  message_routes.hpp  routes_common.cpp  routes_common.hpp  user_routes.cpp  user_routes.hpp
server/services/: message_services.cpp  message_services.hpp  service_exception.hpp  user_services.cpp  user_services.hpp
tests/: CMakeLists.txt  test_auth.cpp  test_crypto.cpp  test_repository.cpp  test_services.cpp
